# gimbal

./: .cproject  .gdb_history  .mxproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  standard_robot.ioc
.cache/clangd/index/: AHRS.h.CB3C7FE874BDF9EA.idx  AHRS_middleware.c.CFCB0404A8D6F6BF.idx  BMI088Middleware.c.CC5BD32C3122802F.idx  BMI088Middleware.h.BDDBFC3FDA93547B.idx  BMI088driver.c.97A07745097A5048.idx  BMI088driver.h.2340B4B61B3CE4EE.idx  CRC8_CRC16.c.64C0FEA651AF417F.idx  Can_Callback.c.2E4ED4785FC8C17A.idx  Can_Callback.h.1EC2F1B4EA392A10.idx  DJI_Motor.c.2572FEAB15C699B7.idx  DJI_Motor.h.EC32D636B3180436.idx  DM_4310.c.932C314C65549F90.idx  DM_4310.h.9AEC03016BB75E78.idx  DT7.c.FE85EF9C1813FEFF.idx  DT7.h.C25AE9A808C15CFB.idx  FreeRTOSConfig.h.34552CF5FA32E4ED.idx  INS_task.c.EED5583A343677B5.idx  INS_task.h.75127DEDF3D4F3AC.idx  adc.c.FE13445A55A6D183.idx  adc.h.6364CD93480063B5.idx  arm_math.h.D6CF3DF45EA40DC0.idx  bsp_adc.c.01D1DE4FAF682300.idx  bsp_adc.h.DB12BC62B8313D0F.idx  bsp_buzzer.c.B8EA0EC961A31258.idx  bsp_buzzer.h.27AC63660F993F7D.idx  bsp_can.c.F5C1017791ADA1EF.idx  bsp_can.h.5DECF235F829D05C.idx  bsp_crc32.c.ECC28C571B52B006.idx  bsp_crc32.h.C53A89E375ECB392.idx  bsp_delay.c.866E67908BDF280D.idx  bsp_delay.h.82634E30E6F8F954.idx  bsp_flash.c.2F22E3B4BE99F649.idx  bsp_flash.h.327A25C78F17884A.idx  bsp_fric.c.0BAEEDDD1D9A5485.idx  bsp_fric.h.BDFC6FB05FEFEFE2.idx  bsp_i2c.c.B2077D9C0A4493B1.idx  bsp_i2c.h.0C80E11CF172E824.idx  bsp_imu_pwm.c.6915DF18F6421B24.idx  bsp_imu_pwm.h.03982B247D6BF770.idx  bsp_laser.c.49D299F53C0D5784.idx  (+151 more)
Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c
USER/application/Task/: INS_task.c  INS_task.h  gimbal_task.c  gimbal_task.h  led_task.c  led_task.h  usb_task.c  usb_task.cpp  usb_task.h
USER/application/callback/: Can_Callback.c  Can_Callback.h  usb_callback.c  usb_callback.cpp  usb_callback.h  usb_callback.hpp
USER/application/module/gimbal/: gimbal.c  gimbal.h  gimbal_behaviour.c  gimbal_behaviour.h
USER/application/module/imu/: imu.c  imu.h
USER/components/algorithm/: AHRS.h  AHRS_middleware.c  AHRS_middleware.h  user_lib.h
USER/components/algorithm/Include/: arm_math.h
USER/components/bsp/: bsp_can.c  bsp_crc32.h  bsp_flash.c  bsp_flash.h  bsp_led.c  bsp_led.h  bsp_rng.h  bsp_spi.h  bsp_usart.c
USER/components/device/DJI_Motor/: DJI_Motor.c  DJI_Motor.h
USER/components/device/DM/: DM_4310.c  DM_4310.h
USER/components/device/DT7/: DT7.c  DT7.h
USER/components/device/bmi088/: BMI088driver.h
USER/components/support/: CRC8_CRC16.c  struct_typedef.h
User_config/: daplink.cfg  jlink.cfg  stlink.cfg
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  gimbal_task.elf  gimbal_task.hex  gimbal_task.map
cmake/stm32cubemx/: CMakeLists.txt
test/: 1.py  hex_receiver.py  rec.py  receiver.py  send.py  sender.py
